--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/Adrian/Documents/GMIT/Advanced OOP/db4o-8.0.249.16098-all-java5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Adrian/Documents/GMIT/Advanced OOP/xtea_db4o_8.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
